spacing issue identified by ramindra

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -112,6 +112,7 @@ body {
   background-position: center;
   width: 75%;
   height: 100%;
+  background-size: 70% auto;
   top: 0;
   left: 50%;
   padding: 12px;
